tests/NormalTests/paczka1/small_fuzzy/59154112.err
Error in line 4: A517 A623 0,
Error in line 5: A517 A347 37,3
Error in line 15: 5Ogj A347 -1,8
